# Team11

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Licence  README.md
CarRemote/: CMakeLists.txt  main.cpp  messages.cpp  messages.hpp
carComm/src/: CMakeLists.txt  Dockerfile  Fetcher.hpp
communication/src/: CMakeLists.txt  ComTest1.cpp  Fetcher.cpp  Sender.cpp
src/: sender.cpp
v2v-group11/: CMakeLists.txt  Dockerfile  Dockerfile.armhf  docker-compose.yml  how to build
v2v-group11/src/V2V/: CMakeLists.txt  Messages.odvd  V2VService.cpp  V2VService.hpp
v2v-group11/src/V2V-example-mod/v2v-protocol/: Messages.odvd  V2VService.cpp  V2VService.hpp
